--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MsgAsignarCategoriaPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MsgAsignarCategoriaPlanilla.cshtml
@@ -11,6 +11,10 @@
     <div class="text-center alert alert-@Model.Color"><i class="fa @Model.Icon">&nbsp;</i>@Html.Raw(Model.Message)</div>
 </div>
 
+<a href="@Url.Action("CategoriasPlanillaAsignadas","Trabajadores", new { id = ViewBag.TrabajadorID })" class="btn btn-outline-primary" id="btn-return">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp;Volver a la lista
+</a>
+
 <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal">
     <i class="fa fa-times-circle-o"></i> Cerrar
 </button>
