--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CategoriasPlanillaAsignadas.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CategoriasPlanillaAsignadas.cshtml
@@ -148,7 +148,7 @@
                 {
                     targets: 0,
                     render: function (data, type, row) {
-                        return data ? row.categoriaPlanillaDesc + '<br/><b>(Principal)<b/>' : row.categoriaPlanillaDesc;
+                        return data ? row.categoriaPlanillaDesc + '<br/><b>(Planilla Principal)<b/>' : row.categoriaPlanillaDesc;
                     }
                 },
                 {
