--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -24,7 +24,7 @@
                 <i class="fa fa-fw fa-bar-chart"></i> Reportes<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="reports" class="collapse">
-                <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Planillas generadas</a></li>
+                <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Resumen totales por trabajador</a></li>
                 <li><a href="@Url.Action("ResumenActividadYDependencia", "Reportes")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
                 <li><a href="@Url.Action("ResumenSIAF", "Reportes")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
             </ul>
